<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/clear"
        android:id="@+id/clear"
        android:icon="@drawable/clear_image"
        app:showAsAction="always"/>

    <item android:title="@string/saveImage"
        android:id="@+id/save"
        android:icon="@drawable/save_image"
        app:showAsAction="always"/>

    <item android:title="@string/loadImage"
        android:id="@+id/load"
        android:icon="@drawable/favourites"
        app:showAsAction="always"/>

    <item android:title="@string/help"
        android:id="@+id/help"
        android:icon="@drawable/help"/>

    <item android:title="@string/goBackBtn"
        android:id="@+id/back"
        android:icon="@drawable/go_back"/>

</menu>