<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_article_search">

    <fragment
        android:id="@+id/nav_article_search"
        android:name="com.example.finalproject.ny_nguyen.TheGuardianSearchFragment"
        android:label="@string/menu_article_search"
        tools:layout="@layout/the_guardian_fragment_article_search" />

    <fragment
        android:id="@+id/nav_final_project"
        android:name="com.example.finalproject.ApplicationHome"
        android:label="@string/menu_goBack"
        tools:layout="@layout/activity_application_home" />

    <fragment
        android:id="@+id/nav_main_page"
        android:label="@string/menu_main_page"/>



</navigation>