<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/Black"
        android:textSize="32dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTitle"
        android:layout_alignLeft="@id/headerTitle"
        android:layout_alignRight="@id/headerTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/authors"
        android:textColor="@color/Black"
        android:textSize="16dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author"
        android:layout_alignLeft="@id/headerTitle"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textColor="@color/Black"
        android:textSize="16dp"
        android:typeface="serif" />
</RelativeLayout>